--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,6 +1,4 @@
-@import '~bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 // Personnalisation des couleurs
 $primary: #52AA5E;   // Bleu
 $bg-primary: #52AA5E;
@@ -17,6 +15,7 @@ $--bs-primary: #52AA5E;
 $font-family-base: 'Poppins', sans-serif;
 $font-family-secondary: 'Lobster', cursive;
 
+@import '~bootstrap/scss/bootstrap';
 
 
 h1 {
@@ -25,6 +24,7 @@ h1 {
 
 h2 {
     color: green;
+    font-size: 12px;
 }
 
 h3 {
