--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+		{% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body class=" ">
-    {% include '_partials/_header.html.twig' %}    
-    {% block body %}{% endblock %}
-    {% include '_partials/_footer.html.twig' %}
-    </body>
-</html>
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+	</head>
+	<body class="">
+		{% include '_partials/_header.html.twig' %}
+		<main style="padding-top: 114px;">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-12 col-lg-10"> {% block document %}{% endblock %}
+						</div>
+					</div>
+				</div>
+			</main>
+
+			{% include '_partials/_footer.html.twig' %}
+		</body>
+	</html>
