style: styling index

--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -1,47 +1,26 @@
-<section class="py-20 bg-dark overflow-hidden">
-  <div class="container">
-    <div class="text-center pb-20 border-bottom">
-      <a class="d-inline-block mb-20" href="#">
-        <img class="img-fluid" src="yofte-assets/logos/yofte-logo-white.svg" alt="">
-      </a>
-      <ul class="row align-items-center justify-content-center list-unstyled mb-n4">
-        <li class="col-12 col-sm-6 col-md-4 col-lg-auto mb-4"><a class="btn bg-transparent py-2 rounded-pill border border-white text-white" href="#">Category</a></li>
-        <li class="col-12 col-sm-6 col-md-4 col-lg-auto mb-4"><a class="btn bg-transparent py-2 rounded-pill border border-white text-white" href="#">Collection</a></li>
-        <li class="col-12 col-sm-6 col-md-4 col-lg-auto mb-4"><a class="btn bg-transparent py-2 rounded-pill border border-white text-white" href="#">Story</a></li>
-        <li class="col-12 col-sm-6 col-md-4 col-lg-auto mb-4"><a class="btn bg-transparent py-2 rounded-pill border border-white text-white" href="#">Brand</a></li>
-        <li class="col-12 col-sm-6 col-md-4 col-lg-auto mb-4"><a class="btn bg-transparent py-2 rounded-pill border border-white text-white" href="#">Partners</a></li>
-        <li class="col-12 col-sm-6 col-md-4 col-lg-auto mb-4"><a class="btn bg-transparent py-2 rounded-pill border border-white text-white" href="#">Videos</a></li>
-        <li class="col-12 col-sm-6 col-md-4 col-lg-auto mb-4"><a class="btn bg-transparent py-2 rounded-pill border border-white text-white" href="#">Contact</a></li>
-      </ul>
-      <div class="row mt-20 text-start">
-        <div class="col-12 col-lg-auto mb-10 mb-lg-0">
-          <h6 class="mb-3 lead fw-bold text-primary">Contact Us</h6>
-          <p class="h4 text-white">+41 0087 44 431</p>
-        </div>
-        <div class="col-12 col-lg-auto mb-10 mb-lg-0">
-          <h6 class="mb-3 lead fw-bold text-primary">Email</h6>
-          <p class="h4 text-white">help@example.com</p>
-        </div>
-        <div class="col-auto ms-md-auto">
-          <div class="d-flex flex-wrap align-items-center">
-            <h6 class="me-10 mb-0 lead fw-bold text-primary">Follow Us:</h6>
-            <div class="d-flex">
-              <a class="d-inline-block me-2" href="#">
-                <img class="img-fluid" src="yofte-assets/buttons/facebook-white-circle.svg" alt="">
-              </a>
-              <a class="d-inline-block me-2" href="#">
-                <img class="img-fluid" src="yofte-assets/buttons/instagram-circle.svg" alt="">
-              </a>
-              <a class="d-inline-block" href="#">
-                <img class="img-fluid" src="yofte-assets/buttons/twitter-circle.svg" alt="">
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="mt-10 text-center">
-      <p class="text-secondary">© Copyright 2021 Yofte</p>
-    </div>
-  </div>
+<section class="py-6">
+	<div class="container">
+		<div class="mw-4xl mx-auto text-center">
+			<div class="pb-9 border-bottom border-dark-light">
+				<a class="d-inline-block mb-8" href="#">
+					<img class="img-fluid" src="https://static.shuffle.dev/uploads/files/3e/3ee2673ade3684a7f46fa65550b3fd0519b1e8e9/culinaria-logo.png" alt="" style="height: 39px;">
+				</a>
+				<div class="row mb-n4 justify-content-center align-items-center">
+					<div class="col-12 col-md-6 col-lg-2 mb-4">
+						<a class="d-inline-block text-primary-gradient" href="#">Accueil</a>
+					</div>
+					<div class="col-12 col-md-6 col-lg-2 mb-4">
+						<a class="d-inline-block text-primary-gradient" href="#">Catalogue</a>
+					</div>
+					<div class="col-12 col-md-6 col-lg-2 mb-4">
+						<a class="d-inline-block text-primary-gradient" href="#">A propos</a>
+					</div>
+					<div class="col-12 col-md-6 col-lg-2 mb-4">
+						<a class="d-inline-block text-primary-gradient" href="#">Inscription</a>
+					</div>
+				</div>
+			</div>
+			<p class="mt-8 text-muted">Copyright © 2024 Culinaria. Tous droits réservés</p>
+		</div>
+	</div>
 </section>
