--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -1,14 +1,14 @@
 <section class="position-fixed" style="height: 100px ;width: 100%; z-index: 999;">
 	<nav class="navbar py-0 navbar-expand-lg navbar-light bg-primary text-light border-bottom">
 		<div class="container-fluid" style="width: 85%; margin: auto;">
-			<a class="navbar-brand h6 flex-shrink-0 py-4" href="#">
+			<a class="navbar-brand  flex-shrink-0 py-4" href="#">
 				<img class="" src="https://static.shuffle.dev/uploads/files/3e/3ee2673ade3684a7f46fa65550b3fd0519b1e8e9/culinaria-logo.png" alt="" width="120px">
 			</a>
 			<button class="navbar-burger navbar-toggler" type="button">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="d-none d-xl-flex navbar-collapse ms-12">
-				<div class="d-none d-xl-flex align-items-center pe-2 bg-white rounded-3 ps-8 py-1">
+				<div class="d-none d-xl-flex align-items-center pe-2 bg-white rounded-3 ps-4">
 					<svg class="flex-shrink-0 me-2" style="width: 24px; height: 18px;" width="18" height="18" viewbox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path d="M17.5 17.1309L12.5042 11.9551" stroke="black" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
 						<path d="M7.27524 13.8672C10.8789 13.8672 13.8002 10.945 13.8002 7.34033C13.8002 3.73565 10.8789 0.813477 7.27524 0.813477C3.67159 0.813477 0.750244 3.73565 0.750244 7.34033C0.750244 10.945 3.67159 13.8672 7.27524 13.8672Z" stroke="black" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -17,10 +17,10 @@
 				</div>
 				<ul class="navbar-nav me-12 mb-2 mb-lg-0 mx-auto px-xxl-12">
 					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="#">Category</a>
+						<a class="nav-link" aria-current="page" href="#">Catalogue</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="#">Story</a>
+						<a class="nav-link" aria-current="page" href="#">A propos</a>
 					</li>
 					<li class="nav-item"></li>
 				</ul>
@@ -37,7 +37,7 @@
 						<path d="M16.0006 16.3154C19.1303 16.3154 21.6673 13.799 21.6673 10.6948C21.6673 7.59064 19.1303 5.07422 16.0006 5.07422C12.871 5.07422 10.334 7.59064 10.334 10.6948C10.334 13.799 12.871 16.3154 16.0006 16.3154Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
 						<path d="M24.4225 23.8963C23.6678 22.3507 22.4756 21.0445 20.9845 20.1298C19.4934 19.2151 17.7647 18.7295 15.9998 18.7295C14.2349 18.7295 12.5063 19.2151 11.0152 20.1298C9.52406 21.0445 8.33179 22.3507 7.57715 23.8963" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
 					</svg>
-					<span>Sign In</span>
+					<span>S'inscrire</span>
 				</a>
 				<a class="d-lg-none d-flex me-6 align-items-center text-secondary" href="#">
 					<svg class="me-2" width="23" height="23" viewbox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
