feat: add a filter sidebar

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -13,10 +13,10 @@ $--bs-primary: #52AA5E !default;
 
 // light versions
 $primary-light: #5fab69 !default;
-$secondary-light: #fa9b42 !default;
+$secondary-light: #fbca9d !default;
 $success-light: #6ae49d !default;
 $info-light: #EDEBEB !default;
-$warning-light: #fec61f !default;
+$warning-light: #fb983b !default;
 $danger-light: #ff7474 !default;
 $light-light: #FFFFFF !default;
 $dark-light: #5c5c5b !default;
