--- a/templates/home/sections/findProduct.html.twig
+++ b/templates/home/sections/findProduct.html.twig
@@ -2,20 +2,45 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-4">
-				<div class="d-block d-sm-inline-block pt-9 pb-12 pb-md-4 ps-12 pe-8 bg-secondary rounded-3">
+				<div class="pb-6 w-100 d-flex justify-content-center ">
+					<button class="bg-light small-font-size py-2 px-3 rounded-5" id="btn-promotion">Afficher les promotions</button>
+				</div>
+				<div
+					class="d-block d-sm-inline-block pt-9 pb-12 pb-md-4 ps-12 pe-8 bg-secondary rounded-3">
 					<div class="mb-10">
 						<h6 class="d-inline-block mb-5 text-primary-gradient">Rayon</h6>
-						<div class="d-flex mb-2 align-items-center">
-							<input class="form-check-input me-3 border-dark-light" type="radio" name="category"><span class="ms-3 fw-medium text-light">Boissons</span>
-
+						<div class="category-container">
+							<button class="category-btn">Boissons</button>
+							<div class="sub-categories" data-category="Boissons">
+								<label><input type="checkbox" class="sub-category-checkbox">
+									Eau</label>
+								<label><input type="checkbox" class="sub-category-checkbox">
+									Jus de fruits</label>
+								<label><input type="checkbox" class="sub-category-checkbox">
+									Boissons gazeuses</label>
+							</div>
 						</div>
-						<div class="d-flex mb-2 align-items-center">
-							<input class="form-check-input me-3 border-dark-light" type="radio" name="category"><span class="ms-3 fw-medium text-light">Gourmet & Charcuterie</span>
-
+						<div class="category-container">
+							<button class="category-btn">Gourmet & Charcuterie</button>
+							<div class="sub-categories" data-category="Gourmet & Charcuterie">
+								<label><input type="checkbox" class="sub-category-checkbox">
+									Fromages</label>
+								<label><input type="checkbox" class="sub-category-checkbox">
+									Charcuteries</label>
+								<label><input type="checkbox" class="sub-category-checkbox">
+									Pâtes fines</label>
+							</div>
 						</div>
-						<div class="d-flex mb-2 align-items-center">
-							<input class="form-check-input me-3 border-dark-light" type="radio" name="category"><span class="ms-3 fw-medium text-light">Fruits et légumes</span>
-
+						<div class="category-container">
+							<button class="category-btn">Fruits et légumes</button>
+							<div class="sub-categories" data-category="Fruits et légumes">
+								<label><input type="checkbox" class="sub-category-checkbox">
+									Fruits</label>
+								<label><input type="checkbox" class="sub-category-checkbox">
+									Légumes</label>
+								<label><input type="checkbox" class="sub-category-checkbox">
+									Bio</label>
+							</div>
 						</div>
 					</div>
 					<div class="mb-10">
