--- a/templates/home/sections/findProduct.html.twig
+++ b/templates/home/sections/findProduct.html.twig
@@ -5,13 +5,12 @@
 				<div class="pb-6 w-100 d-flex justify-content-center ">
 					<button class="bg-light small-font-size py-2 px-3 rounded-5" id="btn-promotion">Afficher les promotions</button>
 				</div>
-				<div
-					class="d-block d-sm-inline-block pt-9 pb-12 pb-md-4 ps-12 pe-8 bg-secondary rounded-3">
-					<div class="mb-10">
+				<div class="d-block d-sm-inline-block pt-9 pb-12 pb-md-4 ps-12 pe-8 bg-secondary rounded-3">
+					<div class="mb-6">
 						<h6 class="d-inline-block mb-5 text-primary-gradient">Rayon</h6>
 						<div class="category-container">
-							<button class="category-btn">Boissons</button>
-							<div class="sub-categories" data-category="Boissons">
+							<button class="category-btn rounded-5 py-2 px-3">Boissons</button>
+							<div class="sub-categories pl-4" data-category="Boissons">
 								<label><input type="checkbox" class="sub-category-checkbox">
 									Eau</label>
 								<label><input type="checkbox" class="sub-category-checkbox">
@@ -21,8 +20,8 @@
 							</div>
 						</div>
 						<div class="category-container">
-							<button class="category-btn">Gourmet & Charcuterie</button>
-							<div class="sub-categories" data-category="Gourmet & Charcuterie">
+							<button class="category-btn rounded-5 py-2 px-3">Gourmet & Charcuterie</button>
+							<div class="sub-categories pl-4" data-category="Gourmet & Charcuterie">
 								<label><input type="checkbox" class="sub-category-checkbox">
 									Fromages</label>
 								<label><input type="checkbox" class="sub-category-checkbox">
@@ -32,8 +31,8 @@
 							</div>
 						</div>
 						<div class="category-container">
-							<button class="category-btn">Fruits et légumes</button>
-							<div class="sub-categories" data-category="Fruits et légumes">
+							<button class="category-btn rounded-5 py-2 px-3">Fruits et légumes</button>
+							<div class="sub-categories pl-4" data-category="Fruits et légumes">
 								<label><input type="checkbox" class="sub-category-checkbox">
 									Fruits</label>
 								<label><input type="checkbox" class="sub-category-checkbox">
