fix: js for btn behavior

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,5 +10,6 @@
 		{% include 'home/sections/deals.html.twig' %}
 		{% include 'home/sections/categories.html.twig' %}
 		{% include 'home/sections/findProduct.html.twig' %}
+		{% include 'home/sections/recommandations.html.twig' %}
 	</div>
 {% endblock %}
