feat: add registration

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
 		<main style="padding-top: 114px;">
 			<div class="container">
 				<div class="row justify-content-center">
-					<div class="col-12 col-lg-10"> {% block document %}{% endblock %}
+					<div class="col-12 col-lg-10"> {% block body %}{% endblock %}
 						</div>
 					</div>
 				</div>
