--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,13 +3,13 @@
 {% block title %}Hello HomeController!
 {% endblock %}
 
-{% block document %}
+{% block body %}
 
 	<div>
 		{% include 'home/sections/banner.html.twig' %}
 		{% include 'home/sections/deals.html.twig' %}
 		{% include 'home/sections/categories.html.twig' %}
 		{% include 'home/sections/findProduct.html.twig' %}
-		{% include 'home/sections/recommandations.html.twig' %}
+		{# {% include 'home/sections/recommandations.html.twig' %} #}
 	</div>
 {% endblock %}
