--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -1,7 +1,7 @@
 <section class="position-fixed" style="height: 100px ;width: 100%; z-index: 999;">
 	<nav class="navbar py-0 navbar-expand-lg navbar-light bg-primary text-light border-bottom">
 		<div class="container-fluid" style="width: 85%; margin: auto;">
-			<a class="navbar-brand  flex-shrink-0 py-4" href="#">
+			<a class="navbar-brand  flex-shrink-0 py-4" href="/">
 				<img class="" src="https://static.shuffle.dev/uploads/files/3e/3ee2673ade3684a7f46fa65550b3fd0519b1e8e9/culinaria-logo.png" alt="" width="120px">
 			</a>
 			<button class="navbar-burger navbar-toggler" type="button">
@@ -32,7 +32,7 @@
 					</svg>
 					<span class="d-inline-block text-center bg-white rounded-circle fw-bold" style="width: 24px; height: 24px;">3</span>
 				</a>
-				<a class="ms-auto align-self-stretch border-start link-dark text-decoration-none d-flex align-items-center fw-bold px-10" href="#">
+				<a class="ms-auto align-self-stretch border-start link-dark text-decoration-none d-flex align-items-center fw-bold px-10" href="/register">
 					<svg class="me-3" width="32" height="31" viewbox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path d="M16.0006 16.3154C19.1303 16.3154 21.6673 13.799 21.6673 10.6948C21.6673 7.59064 19.1303 5.07422 16.0006 5.07422C12.871 5.07422 10.334 7.59064 10.334 10.6948C10.334 13.799 12.871 16.3154 16.0006 16.3154Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
 						<path d="M24.4225 23.8963C23.6678 22.3507 22.4756 21.0445 20.9845 20.1298C19.4934 19.2151 17.7647 18.7295 15.9998 18.7295C14.2349 18.7295 12.5063 19.2151 11.0152 20.1298C9.52406 21.0445 8.33179 22.3507 7.57715 23.8963" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
