--- a/templates/home/sections/banner.html.twig
+++ b/templates/home/sections/banner.html.twig
@@ -1,4 +1,4 @@
-<section class="position-relative overflow-hidden bs-section-dragged">
+<section class="position-relative overflow-hidden bs-section-dragged pt-16">
 	<div class="d-flex flex-wrap">
 		<div class="col-12 col-lg-6">
 			<div class="container mb-lg-0 mb-10">
