--- a/templates/form/bootstrap5.html.twig
+++ b/templates/form/bootstrap5.html.twig
@@ -212,8 +212,9 @@
     {%- set attr_class = attr_class|default(attr.class|default('')) -%}
     {%- set row_class = '' -%}
     {%- if 'btn-check' not in attr_class -%}
-        {%- set attr_class = attr_class ~ ' form-check-input' -%}
-        {%- set row_class = 'form-check' -%}
+        {%- set attr_class = attr_class ~ ' form-check-input pl-0 hidden' -%}
+{%- set row_class = 'form-check pl-0 hidden' -%}
+
     {%- endif -%}
     {%- set attr = attr|merge({class: attr_class|trim}) -%}
     {%- set parent_label_class = parent_label_class|default(label_attr.class|default('')) -%}
@@ -278,13 +279,16 @@
         {%- if compound is defined and compound -%}
             {%- set element = 'legend' -%}
 {%- if 'col-form-label text-primary' not in parent_label_class -%}
-                {%- set label_attr = label_attr|merge({class: (label_attr.class|default('') ~ ' col-form-label' )|trim}) -%}
+{%- set label_attr = label_attr|merge({class: (label_attr.class|default('text-black fw-bold mb-2') ~ ' col-form-label' )|trim}) -%}
+
             {%- endif -%}
         {%- else -%}
             {%- set row_class = row_class|default(row_attr.class|default('')) -%}
             {%- set label_attr = label_attr|merge({for: id}) -%}
             {%- if 'col-form-label' not in parent_label_class -%}
-                {%- set label_attr = label_attr|merge({class: (label_attr.class|default('') ~ ('input-group' in row_class ? ' input-group-text' : ' form-label') )|trim}) -%}
+{%- set label_attr = label_attr|merge({class: (label_attr.class|default('text-black fw-bold mb-2') ~ ('input-group' in row_class ? ' input-group-text' : ' form-label') )|trim}) -%}
+
+
             {%- endif -%}
         {%- endif -%}
     {%- endif -%}
