--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,33 +1,40 @@
 {% extends 'base.html.twig' %}
+{% use "form/bootstrap5.html.twig" %}
+
 
 {% block title %}Register
 {% endblock %}
 
 {% block body %}
 	<section class="overflow-hidden">
-		<div class="container">
-			<div class="d-flex justify-content-center align-items-center pt-8">
-				<a class="d-inline-block h6" href="{{ path('app_home') }}">
-					<img class="img-fluid" src="https://static.shuffle.dev/uploads/files/3e/3ee2673ade3684a7f46fa65550b3fd0519b1e8e9/culinaria-logo.png" alt="Logo">
-				</a>
-			</div>
+		<div class="container mt-16">
 			<div
-				class="row align-items-center small-font-size">
+				class="row align-items-center medium-font-size">
+
 				<!-- Colonne de gauche pour le formulaire -->
-				<div class="col-lg-6">
+				<div class="col-lg-6" style="height: 600px">
 					<div class="py-2 text-center">
-						<h2 class="mb-8 large-font-size">Signing up with social is super quick</h2>
-						<p class="mb-10">Please, do not hesitate</p>
-						{{ form_start(registrationForm, {'attr': {'class': 'form'}}) }}
-						{{ form_row(registrationForm.email, {'attr': {'class': 'form-control form-control-lg mb-2', 'placeholder': 'john@example.com'}}) }}
-						{{ form_row(registrationForm.plainPassword, {'attr': {'class': 'form-control form-control-lg mb-2', 'placeholder': 'Password'}}) }}
-						{{ form_row(registrationForm.agreeTerms, {'attr': {'class': 'form-check-input'}}) }}
-						<button class="mt-12 mt-md-2 btn btn-dark d-block" type="submit">Je m'inscris</button>
+						<h2 class="mb-3 base-title-font-size">Inscris-toi, c'est facile !</h2>
+						<p class="mb-10">Et tu pourras ensuite passer ta première commande</p>
+						{{ form_start(registrationForm, {'attr': {'class': ''}}) }}
+						{{ form_row(registrationForm.email, {'attr': {'class': '', 'placeholder': 'prenom@mail.com'}}) }}
+						{{ form_row(registrationForm.plainPassword, {'attr': {'class': '', 'placeholder': 'Mot de passe'}}) }}
+						<div class="w-100 d-flex">
+							{{ form_widget(registrationForm.agreeTerms, {'attr': {'class': '', 'placeholder': 'Mot de passe'}}) }}
+							<div>
+								<label for="{{ registrationForm.agreeTerms.vars.id }}" class="">
+									J'accepte les termes et conditions
+								</label>
+							</div>
+						</div>
+
+						<button class="mt-8 mt-md-8 btn btn-dark d-block" type="submit">Je m'inscris</button>
 						{{ form_end(registrationForm) }}
 					</div>
 				</div>
-				<div class="col-lg-6 d-none d-lg-block">
-					<img class="w-100 h-100" src="{{ asset('images/register-bg.jpg') }}" alt="Registration">
+				<div class="col-lg-6 d-none d-lg-flex align-items-center justify-content-center" style="height: 500px">
+
+					<img class=" rounded-4 h-75 w-75 " src="{{ asset('images/register-bg.jpg') }}" alt="Registration">
 				</div>
 			</div>
 		</div>
