--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -28,13 +28,14 @@
 							</div>
 						</div>
 
-						<button class="mt-8 mt-md-8 btn btn-dark d-block" type="submit">Je m'inscris</button>
+						<button class="mt-8 mt-md-8 btn bg-secondary d-block text-light hover-effect" type="submit">Je m'inscris</button>
+
+
 						{{ form_end(registrationForm) }}
 					</div>
 				</div>
 				<div class="col-lg-6 d-none d-lg-flex align-items-center justify-content-center" style="height: 500px">
-
-					<img class=" rounded-4 h-75 w-75 " src="{{ asset('images/register-bg.jpg') }}" alt="Registration">
+					<img class=" rounded-4 h-75 w-75" src="{{ asset('images/register-bg.jpg') }}" alt="Registration">
 				</div>
 			</div>
 		</div>
