--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,22 +13,41 @@
 			<a href="{{ path('app_logout') }}">Se déconnecter</a>
 		</div>
 	{% else %}
-		<form method="post">
+		<form method="post" class="container mt-16">
 			{% if error %}
 				<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 			{% endif %}
 
-			<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-			<label for="inputEmail">Email</label>
-			<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-			<label for="inputPassword">Password</label>
-			<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+			<div class="row align-items-center medium-font-size">
 
-			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+				<div class="col-lg-6 d-none d-lg-flex align-items-center justify-content-center" style="height: 500px">
+					<img class=" rounded-4 h-75 w-75" src="{{ asset('images/login-bg.jpg') }}" alt="Registration">
+				</div>
 
-			<button class="btn btn-lg btn-primary" type="submit">
-				Sign in
-			</button>
+				<div class="col-lg-6" style="height: 600px">
+					<div class="py-2 text-center">
+						<h2 class="mb-3 base-title-font-size">Te revoilà, nous t'attendions !
+						</h2>
+						<p class="mb-10">Et tu pourras ensuite passer ta première commande</p>
+
+						<div class='d-flex flex-column justify-content-start align-items-start mb-4'>
+							<label for="inputEmail" class='text-black fw-bold mb-2'>Email</label>
+
+							<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+						</div>
+						<div class='d-flex flex-column justify-content-start align-items-start mb-12'>
+							<label for="inputPassword" class='text-black fw-bold mb-2'>Password</label>
+							<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+						</div>
+						<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+<button class="mt-8 mt-md-8 btn bg-secondary d-block text-light hover-effect" type=" submit">
+
+							Se connecter
+						</button>
+					</div>
+				</div>
+			</div>
 		</form>
 	{% endif %}
 {% endblock %}
