feat: add conditionnal rendering and dropdown

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -28,7 +28,7 @@
 					<div class="py-2 text-center">
 						<h2 class="mb-3 base-title-font-size">Te revoilà, nous t'attendions !
 						</h2>
-						<p class="mb-10">Et tu pourras ensuite passer ta première commande</p>
+						<p class="mb-10">nous sommes ravis de te revoir</p>
 
 						<div class='d-flex flex-column justify-content-start align-items-start mb-4'>
 							<label for="inputEmail" class='text-black fw-bold mb-2'>Email</label>
