--- a/templates/home/sections/findProduct.html.twig
+++ b/templates/home/sections/findProduct.html.twig
@@ -6,6 +6,14 @@
 					<button class="bg-light small-font-size py-2 px-3 rounded-5" id="btn-promotion">Afficher les promotions</button>
 				</div>
 				<div class="d-block d-sm-inline-block pt-9 pb-12 pb-md-4 ps-12 pe-8 bg-secondary rounded-3">
+					<div class="d-none d-xl-flex align-items-center pe-2 mb-8 bg-white rounded-3 ps-4">
+						<svg class="flex-shrink-0 me-2" style="width: 24px; height: 18px;" width="18" height="18" viewbox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M17.5 17.1309L12.5042 11.9551" stroke="black" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+							<path d="M7.27524 13.8672C10.8789 13.8672 13.8002 10.945 13.8002 7.34033C13.8002 3.73565 10.8789 0.813477 7.27524 0.813477C3.67159 0.813477 0.750244 3.73565 0.750244 7.34033C0.750244 10.945 3.67159 13.8672 7.27524 13.8672Z" stroke="black" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+						</svg>
+						<input class="form-control me-2 border-0 bg-white" type="text" placeholder="">
+					</div>
+
 					<div class="mb-6">
 						<h6 class="d-inline-block mb-5 text-primary-gradient">Rayon</h6>
 						<div class="category-container">
