--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -48,13 +48,24 @@
 							</span>
 						</a>
 						<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-							{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+							{% if is_granted('ROLE_ADMIN')  %}
+								<li>
+									<a class="dropdown-item" href="{{path('app_admin')}}">Pannel administration</a>
+								</li>
+								<li>
+									<a class="dropdown-item" href="{{path('app_logout')}}">Se déconnecter</a>
+								</li>
+
+
+								{# elseif he is admin	 #}
+							{% elseif is_granted('ROLE_USER') %}
 								<li>
 									<a class="dropdown-item" href="{{path('app_profile')}}">Profil</a>
 								</li>
 								<li>
 									<a class="dropdown-item" href="{{path('app_logout')}}">Se déconnecter</a>
 								</li>
+
 							{% else %}
 								<li>
 									<a class="dropdown-item" href="{{path('app_login')}}">Se connecter</a>
@@ -63,73 +74,67 @@
 									<a class="dropdown-item" href="{{path('app_register')}}">S'enregistrer</a>
 								</li>
 							{% endif %}
-
-						</ul>
+						</li>
 					</li>
-				</li>
-			</ul>
-			<a class="d-lg-none d-flex me-6 align-items-center text-secondary" href="#">
-				<svg class="me-2" width="23" height="23" viewbox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M18.1159 8.72461H2.50427C1.99709 8.72461 1.58594 9.12704 1.58594 9.62346V21.3085C1.58594 21.8049 1.99709 22.2074 2.50427 22.2074H18.1159C18.6231 22.2074 19.0342 21.8049 19.0342 21.3085V9.62346C19.0342 9.12704 18.6231 8.72461 18.1159 8.72461Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-					<path d="M6.34473 6.34469V4.95676C6.34473 3.85246 6.76252 2.79338 7.5062 2.01252C8.24988 1.23165 9.25852 0.792969 10.3102 0.792969C11.362 0.792969 12.3706 1.23165 13.1143 2.01252C13.858 2.79338 14.2758 3.85246 14.2758 4.95676V6.34469" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-				</svg>
-				<span class="d-inline-block text-center bg-white rounded-circle fw-bold" style="width: 24px; height: 24px;">3</span>
-			</a>
-		</div>
+				</ul>
+			</li>
+		</li>
+	</ul>
+	<a class="d-lg-none d-flex me-6 align-items-center text-secondary" href="#">
+		<svg class="me-2" width="23" height="23" viewbox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<path d="M18.1159 8.72461H2.50427C1.99709 8.72461 1.58594 9.12704 1.58594 9.62346V21.3085C1.58594 21.8049 1.99709 22.2074 2.50427 22.2074H18.1159C18.6231 22.2074 19.0342 21.8049 19.0342 21.3085V9.62346C19.0342 9.12704 18.6231 8.72461 18.1159 8.72461Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+			<path d="M6.34473 6.34469V4.95676C6.34473 3.85246 6.76252 2.79338 7.5062 2.01252C8.24988 1.23165 9.25852 0.792969 10.3102 0.792969C11.362 0.792969 12.3706 1.23165 13.1143 2.01252C13.858 2.79338 14.2758 3.85246 14.2758 4.95676V6.34469" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+		</svg>
+		<span class="d-inline-block text-center bg-white rounded-circle fw-bold" style="width: 24px; height: 24px;">3</span>
+	</a>
+</div></div></nav><div class="navbar-menu d-none position-fixed top-0 start-0 bottom-0 w-75 mw-sm" style="z-index: 9999;"><div class="navbar-close position-fixed top-0 start-0 w-100 h-100 bg-dark opacity-25"></div><nav class="position-relative h-100 w-100 d-flex flex-column py-6 px-6 bg-white border-end overflow-auto">
+<div class="d-flex align-items-center mb-8">
+	<a class="me-auto h6" href="#">
+		<img class="img-fluid" src="yofte-assets/logos/yofte-logo.svg" alt="" width="auto">
+	</a>
+	<button class="navbar-close btn p-0">
+		<svg class="text-secondary" style="width: 8px; height: 8px;" width="10" height="10" viewbox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<path d="M9.00002 1L1 9.00002M1.00003 1L9.00005 9.00002" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+		</svg>
+	</button>
+</div>
+<div class="d-flex mb-8 justify-content-between">
+	<div class="d-flex align-items-center">
+		<img class="img-fluid me-2" style="width: 36px; height: 36px;" src="yofte-assets/elements/avatar.svg" alt="">
+		<span class="me-2 fw-bold">Robert</span>
+		<span>
+			<svg width="10" height="6" viewbox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M1.66797 1.66699L5.0013 5.00033L8.33464 1.66699" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+			</svg>
+		</span>
 	</div>
-</nav>
-<div class="navbar-menu d-none position-fixed top-0 start-0 bottom-0 w-75 mw-sm" style="z-index: 9999;">
-	<div class="navbar-close position-fixed top-0 start-0 w-100 h-100 bg-dark opacity-25"></div>
-	<nav class="position-relative h-100 w-100 d-flex flex-column py-6 px-6 bg-white border-end overflow-auto">
-		<div class="d-flex align-items-center mb-8">
-			<a class="me-auto h6" href="#">
-				<img class="img-fluid" src="yofte-assets/logos/yofte-logo.svg" alt="" width="auto">
-			</a>
-			<button class="navbar-close btn p-0">
-				<svg class="text-secondary" style="width: 8px; height: 8px;" width="10" height="10" viewbox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M9.00002 1L1 9.00002M1.00003 1L9.00005 9.00002" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-				</svg>
-			</button>
-		</div>
-		<div class="d-flex mb-8 justify-content-between">
-			<div class="d-flex align-items-center">
-				<img class="img-fluid me-2" style="width: 36px; height: 36px;" src="yofte-assets/elements/avatar.svg" alt="">
-				<span class="me-2 fw-bold">Robert</span>
-				<span>
-					<svg width="10" height="6" viewbox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M1.66797 1.66699L5.0013 5.00033L8.33464 1.66699" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-					</svg>
-				</span>
-			</div>
-			<div class="d-flex align-items-center">
-				<a class="link-dark text-decoration-none me-10" href="#">
-					<svg width="23" height="20" viewbox="0 0 23 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M11.4998 19.2061L2.70115 9.92527C1.92859 9.14433 1.41864 8.1374 1.24355 7.04712C1.06847 5.95684 1.23713 4.8385 1.72563 3.85053V3.85053C2.09464 3.10462 2.63366 2.45803 3.29828 1.96406C3.9629 1.47008 4.73408 1.14284 5.5483 1.00931C6.36252 0.875782 7.19647 0.939779 7.98144 1.19603C8.7664 1.45228 9.47991 1.89345 10.0632 2.48319L11.4998 3.93577L12.9364 2.48319C13.5197 1.89345 14.2332 1.45228 15.0182 1.19603C15.8031 0.939779 16.6371 0.875782 17.4513 1.00931C18.2655 1.14284 19.0367 1.47008 19.7013 1.96406C20.3659 2.45803 20.905 3.10462 21.274 3.85053V3.85053C21.7625 4.8385 21.9311 5.95684 21.756 7.04712C21.581 8.1374 21.071 9.14433 20.2984 9.92527L11.4998 19.2061Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-					</svg>
-				</a>
-				<a class="link-dark text-decoration-none d-flex align-items-center" href="#">
-					<svg class="me-3" width="23" height="23" viewbox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M18.1159 8.72461H2.50427C1.99709 8.72461 1.58594 9.12704 1.58594 9.62346V21.3085C1.58594 21.8049 1.99709 22.2074 2.50427 22.2074H18.1159C18.6231 22.2074 19.0342 21.8049 19.0342 21.3085V9.62346C19.0342 9.12704 18.6231 8.72461 18.1159 8.72461Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-						<path d="M6.34473 6.34469V4.95676C6.34473 3.85246 6.76252 2.79338 7.5062 2.01252C8.24988 1.23165 9.25852 0.792969 10.3102 0.792969C11.362 0.792969 12.3706 1.23165 13.1143 2.01252C13.858 2.79338 14.2758 3.85246 14.2758 4.95676V6.34469" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-					</svg>
-					<span class="d-inline-block text-center bg-light rounded-circle fw-bold" style="width: 24px; height: 24px;">3</span>
-				</a>
-			</div>
-		</div>
-		<input class="form-control mb-10 py-5 px-8 bg-light border-0" type="search" placeholder="Search">
-		<ul class="list-unstyled mb-0 h4">
-			<li class="mb-8">
-				<a class="link-dark text-decoration-none" href="#">Category</a>
-			</li>
-			<li class="mb-8">
-				<a class="link-dark text-decoration-none" href="#">Collection</a>
-			</li>
-			<li class="mb-8">
-				<a class="link-dark text-decoration-none" href="#">Story</a>
-			</li>
-			<li>
-				<a class="link-dark text-decoration-none" href="#">Brand</a>
-			</li>
-		</ul>
-	</nav>
-</div></section>
+	<div class="d-flex align-items-center">
+		<a class="link-dark text-decoration-none me-10" href="#">
+			<svg width="23" height="20" viewbox="0 0 23 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M11.4998 19.2061L2.70115 9.92527C1.92859 9.14433 1.41864 8.1374 1.24355 7.04712C1.06847 5.95684 1.23713 4.8385 1.72563 3.85053V3.85053C2.09464 3.10462 2.63366 2.45803 3.29828 1.96406C3.9629 1.47008 4.73408 1.14284 5.5483 1.00931C6.36252 0.875782 7.19647 0.939779 7.98144 1.19603C8.7664 1.45228 9.47991 1.89345 10.0632 2.48319L11.4998 3.93577L12.9364 2.48319C13.5197 1.89345 14.2332 1.45228 15.0182 1.19603C15.8031 0.939779 16.6371 0.875782 17.4513 1.00931C18.2655 1.14284 19.0367 1.47008 19.7013 1.96406C20.3659 2.45803 20.905 3.10462 21.274 3.85053V3.85053C21.7625 4.8385 21.9311 5.95684 21.756 7.04712C21.581 8.1374 21.071 9.14433 20.2984 9.92527L11.4998 19.2061Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+			</svg>
+		</a>
+		<a class="link-dark text-decoration-none d-flex align-items-center" href="#">
+			<svg class="me-3" width="23" height="23" viewbox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M18.1159 8.72461H2.50427C1.99709 8.72461 1.58594 9.12704 1.58594 9.62346V21.3085C1.58594 21.8049 1.99709 22.2074 2.50427 22.2074H18.1159C18.6231 22.2074 19.0342 21.8049 19.0342 21.3085V9.62346C19.0342 9.12704 18.6231 8.72461 18.1159 8.72461Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+				<path d="M6.34473 6.34469V4.95676C6.34473 3.85246 6.76252 2.79338 7.5062 2.01252C8.24988 1.23165 9.25852 0.792969 10.3102 0.792969C11.362 0.792969 12.3706 1.23165 13.1143 2.01252C13.858 2.79338 14.2758 3.85246 14.2758 4.95676V6.34469" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+			</svg>
+			<span class="d-inline-block text-center bg-light rounded-circle fw-bold" style="width: 24px; height: 24px;">3</span>
+		</a>
+	</div>
+</div>
+<input class="form-control mb-10 py-5 px-8 bg-light border-0" type="search" placeholder="Search">
+<ul class="list-unstyled mb-0 h4">
+	<li class="mb-8">
+		<a class="link-dark text-decoration-none" href="#">Category</a>
+	</li>
+	<li class="mb-8">
+		<a class="link-dark text-decoration-none" href="#">Collection</a>
+	</li>
+	<li class="mb-8">
+		<a class="link-dark text-decoration-none" href="#">Story</a>
+	</li>
+	<li>
+		<a class="link-dark text-decoration-none" href="#">Brand</a>
+	</li>
+</ul></nav></div></section>
