--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
 
-	<div>
+	<div class='col-lg-10 mx-auto justify-content-center d-flex flex-column align-items-center '>
 		{% include 'home/sections/banner.html.twig' %}
 		{% include 'home/sections/deals.html.twig' %}
 		{% include 'home/sections/categories.html.twig' %}
