--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -21,6 +21,10 @@ $danger-light: #ff7474 !default;
 $light-light: #FFFFFF !default;
 $dark-light: #5c5c5b !default;
 
+// font colors
+$text-primary: #52AA5E !default;
+$text-secondary: #FB8B24 !default;
+
 // Personnalisation des polices
 $font-family-base: 'Poppins', sans-serif;
 $font-family-secondary: 'Lobster', cursive;
