--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -50,7 +50,7 @@
 						<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 							{% if is_granted('ROLE_ADMIN')  %}
 								<li>
-									<a class="dropdown-item" href="{{path('app_admin')}}">Pannel administration</a>
+									<a class="dropdown-item" href="{{path('app_admin_dashboard')}}">Pannel administration</a>
 								</li>
 								<li>
 									<a class="dropdown-item" href="{{path('app_logout')}}">Se déconnecter</a>
