--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -44,3 +44,31 @@
 .sub-category-checkbox {
     margin-right: 5px;
 }
+
+// card
+.card-custom {
+    height: 380px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-custom-body {
+    height: 55%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-price {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #FB8B24;
+    color: #fff;
+    width: 80px;
+    padding: 2px 4px;
+    text-align: center;
+}
